added common resolutions

--- a/Builder/dashboard.pug
+++ b/Builder/dashboard.pug
@@ -1,5 +1,6 @@
 extends layout
 
+
 block head
 	title Builder Dashboard
 
@@ -11,19 +12,23 @@ block main
 			h2 Display
 			div#canvas-wrapper
 				canvas#builder-canvas(width=480 height=320)
-				span#mouse-coords
+				span#mouse-coords Mouse
 		div#right-pane
 			h2 Properties
 			h4 Display size
-			form#dim-form
+			form#res-form
 				div.form-group
-					label(for='dim-width') Display width (in px)
-					input#dim-width(type='number' min='50')
+					label(for='res-width') Display width (in px)
+					input#res-width(type='number' min='50')
 				div.form-group
-					label(for='dim-height') Display height (in px)
-					input#dim-height(type='number' min='50')
-				input.btn.btn-outline-success#dim-set(type='submit' value='Set display size')
-				input.btn.btn-outline-primary#dim-reset(type='button' value='Reset to default')
+					label(for='res-height') Display height (in px)
+					input#res-height(type='number' min='50')
+				div.form-group
+					label(for='res-list') Or select from common resolutions:
+					select#res-list
+						include resolutions
+				input.btn.btn-outline-success#res-set(type='submit' value='Set display size')
+				input.btn.btn-outline-primary#res-reset(type='button' value='Reset to default')
 
 
 	script(src='../cmake-build-emscripten/Builder/Builder.js')
