--- a/Builder/layout.pug
+++ b/Builder/layout.pug
@@ -3,14 +3,14 @@ head
 	meta(charset='UTF-8')
 	block head
 		title ardUI Builder
+	link(rel='icon' href='./img/ardUI_logo.svg')
 	link(rel='stylesheet' href='./style/stylify.css')
 	link(rel='stylesheet' href='./style/style.css')
 
 body
-	div
+	div.mb-3
 		header
 			include header
-		h1 ardUI Builder
 
 		main
 			block main
