--- a/Builder/resolutions.pug
+++ b/Builder/resolutions.pug
@@ -1,3 +1,4 @@
+option(disabled selected) Select resolution
 option(data-w='160' data-h='120') QQVGA (160×120, 4:3)
 option(data-w='240' data-h='160') HQVGA (240×160, 3:2)
 option(data-w='320' data-h='200') CGA (320×200, 8:5)
