--- a/Builder/dashboard.pug
+++ b/Builder/dashboard.pug
@@ -29,6 +29,7 @@ block main
 						include resolutions
 				input.btn.btn-outline-success#res-set(type='submit' value='Set display size')
 				input.btn.btn-outline-primary#res-reset(type='button' value='Reset to default')
+				input.btn.btn-outline-primary#res-flip(type='button' value='Change orientation')
 
 
 	script(src='../cmake-build-emscripten/Builder/Builder.js')
