added js bindings
added dynamic resize

--- a/Builder/dashboard.pug
+++ b/Builder/dashboard.pug
@@ -4,6 +4,12 @@ extends layout
 block head
 	title Builder Dashboard
 
+
+block header
+	div#tab-switcher
+		span.tab.selected Explore
+		span.tab Build
+
 block main
 	div#dashboard
 		div#left-pane
@@ -33,5 +39,18 @@ block main
 
 
 	script(src='../cmake-build-emscripten/Builder/Builder.js')
-	script(async src='./js/display.js')
-	script(async src='./js/properties.js')
+	script(src='./js/display-interface.js')
+	script(src='./js/dashboard.js')
+	script(src='./js/properties.js')
+
+
+block body
+	div#splash
+		img(src='./img/ardUI_text.svg')#splash-logo
+		div.d-flex.flex-column.align-items-center
+			span#splash-load-error.d-none.text-danger.bold Loading ardUI failed. Please check whether ardUI is compiled correctly.
+			noscript.text-danger.bold ardUI requires JavaScript to work. Please enable it in your browser settings.
+			div#splash-animation
+				span.animation-dot(style="--order:1")
+				span.animation-dot(style="--order:2")
+				span.animation-dot(style="--order:3")
