--- a/Builder/layout.pug
+++ b/Builder/layout.pug
@@ -13,9 +13,12 @@ html(lang='en')
 		div.mb-3
 			header
 				include header
+				block header
 
 			main
 				block main
+
+		block body
 
 		footer
 			include footer
