added iteration of builtin lists

--- a/Builder/dashboard.pug
+++ b/Builder/dashboard.pug
@@ -49,7 +49,7 @@ block body
 		img(src='./img/ardUI_text.svg')#splash-logo
 		div.d-flex.flex-column.align-items-center
 			span#splash-load-error.d-none.text-danger.bold Loading ardUI failed. Please check whether ardUI is compiled correctly.
-			noscript.text-danger.bold ardUI requires JavaScript to work. Please enable it in your browser settings.
+			noscript.text-danger.bold ardUI Builder requires JavaScript to work. Please enable it in your browser settings.
 			div#splash-animation
 				span.animation-dot(style="--order:1")
 				span.animation-dot(style="--order:2")
