added view visualizations

--- a/Builder/dashboard.pug
+++ b/Builder/dashboard.pug
@@ -17,6 +17,7 @@ block main
 		div#center-pane
 			h2 Display
 			div#canvas-wrapper
+				div#view-container
 				canvas#builder-canvas(width=480 height=320)
 				span#mouse-coords Mouse
 		div#right-pane
