--- a/Builder/style/style.styl
+++ b/Builder/style/style.styl
@@ -66,6 +66,18 @@ html
 			#canvas-wrapper
 				width max-content
 
+				#view-container
+					position relative
+
+					div
+						position absolute
+
+						&.view
+							border 1px solid #52dee2
+
+						&.viewGroup
+							border 1px solid #eab33f
+
 				#builder-canvas
 					border 1px dashed #ddd
 
