added basic home page

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -1,1 +1,12 @@
 extends layout
+
+
+block head
+	title Welcome to ardUI!
+
+
+block main
+	h1 Welcome to ardUI!
+	h3 What is ardUI?
+	p ardUI is a simple yet powerful framework that allows you to quickly build complex,
+		|  interactive and beautiful interfaces for all your projects.
