--- a/docs/layout.pug
+++ b/docs/layout.pug
@@ -4,7 +4,7 @@ html(lang='en')
 	head
 		meta(charset='UTF-8')
 		block head
-			title ardUI Builder
+			title ardUI Documentation
 		link(rel='icon' href='./img/ardUI_logo.svg')
 		link(rel='stylesheet' href='./style/stylify.css')
 		link(rel='stylesheet' href='./style/style.css')
