--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -19,6 +19,9 @@ html body header {
 html body header #logo {
   height: 2em;
 }
+html body main {
+  margin: 1em 3em;
+}
 html body footer {
   padding: 1em 2em;
   background-color: #f0f0f0;
