added button for adding text

--- a/Builder/build.pug
+++ b/Builder/build.pug
@@ -14,6 +14,7 @@ block main
 	div#dashboard
 		div#left-pane
 			h2 Widgets
+			span#add-text.btn.btn-outline-secondary Add a text view
 		div#center-pane
 			h2 Display
 			div#canvas-wrapper
