added property editing

--- a/Builder/explore.pug
+++ b/Builder/explore.pug
@@ -6,7 +6,7 @@ block head
 
 
 block header
-	div#tab-switcher
+	div.tabs
 		a(href='./explore').tab.selected Explore
 		a(href='./build').tab Build
 
