--- a/Builder/build.pug
+++ b/Builder/build.pug
@@ -6,7 +6,7 @@ block head
 
 
 block header
-	div#tab-switcher
+	div.tabs
 		a(href='./explore').tab Explore
 		a(href='./build').tab.selected Build
 
@@ -23,21 +23,31 @@ block main
 				span#mouse-coords Mouse
 		div#right-pane
 			h2 Properties
-			h4 Display size
-			form#res-form
-				div.form-group
-					label(for='res-width') Display width (in px)
-					input#res-width(type='number' min='50')
-				div.form-group
-					label(for='res-height') Display height (in px)
-					input#res-height(type='number' min='50')
-				div.form-group
-					label(for='res-list') Or select from common resolutions:
-					select#res-list
-						include resolutions
-				input.btn.btn-outline-success#res-set(type='submit' value='Set display size')
-				input.btn.btn-outline-primary#res-reset(type='button' value='Reset to default')
-				input.btn.btn-outline-primary#res-flip(type='button' value='Change orientation')
+			div.collapsable
+				label(for='display-props') Display
+				input(type='checkbox' name='props')#display-props
+
+				div
+					h4 Display size
+					form#res-form
+						div.form-group
+							label(for='res-width') Display width (in px)
+							input#res-width(type='number' min='50')
+						div.form-group
+							label(for='res-height') Display height (in px)
+							input#res-height(type='number' min='50')
+						div.form-group
+							label(for='res-list') Or select from common resolutions:
+							select#res-list
+								include resolutions
+						input.btn.btn-outline-success#res-set(type='submit' value='Set display size')
+						input.btn.btn-outline-primary#res-reset(type='button' value='Reset to default')
+						input.btn.btn-outline-primary#res-flip(type='button' value='Change orientation')
+			div.collapsable
+				label(for='view-props') View
+				input(type='checkbox' name='props')#view-props
+
+				form#view-prop-container
 
 
 	script(src='../cmake-build-emscripten/Builder/Builder.js')
