--- a/Builder/style/style.styl
+++ b/Builder/style/style.styl
@@ -76,6 +76,9 @@ html
 				& > input[type='checkbox']
 					display none
 
+					& + *
+						margin-left 1em
+
 					&:not(:checked) + *
 						display none
 
