added progressbar bindings

--- a/Builder/build.pug
+++ b/Builder/build.pug
@@ -45,7 +45,7 @@ block main
 						input.btn.btn-outline-primary#res-flip(type='button' value='Change orientation')
 			div.collapsable
 				label(for='view-props') View
-				input(type='checkbox' name='props')#view-props
+				input(type='checkbox' name='props' checked)#view-props
 
 				form#view-prop-container
 
