--- a/docs/templates/layout.pug
+++ b/docs/templates/layout.pug
@@ -5,9 +5,9 @@ html(lang='en')
 		meta(charset='UTF-8')
 		block head
 			title ardUI Docs
-		link(rel='icon' href='./img/ardUI_logo.svg')
-		link(rel='stylesheet' href='./style/stylify.css')
-		link(rel='stylesheet' href='./style/style.css')
+		link(rel='icon' href='/img/ardUI_logo.svg')
+		link(rel='stylesheet' href='/style/stylify.css')
+		link(rel='stylesheet' href='/style/style.css')
 
 	body
 		div.mb-3
