--- a/docs/templates/layout.pug
+++ b/docs/templates/layout.pug
@@ -5,6 +5,7 @@ html(lang='en')
 		meta(charset='UTF-8')
 		block head
 			title ardUI Docs
+		meta(name='viewport' content='width=device-width, initial-scale=1.0')
 		link(rel='icon' href='/img/ardUI_logo.svg')
 		link(rel='stylesheet' href='/style/stylify.css')
 		link(rel='stylesheet' href='/style/style.css')
