added basic page structure and style

--- a/docs/pages/index.pug
+++ b/docs/pages/index.pug
@@ -1,5 +1,9 @@
-extends ../templates/layout
+extends ../templates/tabbed
 
 
-block main
+block content
 	h1 Welcome to ardUI!
+
+
+block nav
+	a(href='/pages/tutorials') Tutorials
