--- a/docs/templates/tabbed.pug
+++ b/docs/templates/tabbed.pug
@@ -2,8 +2,12 @@ extends layout
 
 block main
 	div#tab-layout
-		div#navigation
-			block nav
+		div#nav-tab
+			h3 Navigation
+			div#nav-container
+				block nav
 		div#content
 			block content
-		div#toc-container
+		div#toc-tab
+			h3 Table of contents
+			div#toc-container
