--- a/docs/index.pug
+++ b/docs/index.pug
@@ -20,4 +20,4 @@ html(lang='en')
 					span#line3 age
 			div#buttons.d-flex.flex-column.align-items-start
 				a(href='/pages/tutorials/quickstart')#button-start.button Get started
-				a(href='/pages')#button-docs.button Open docs
+				a(href='/pages')#button-docs.button Learn more
