--- a/docs/templates/layout.pug
+++ b/docs/templates/layout.pug
@@ -4,7 +4,7 @@ html(lang='en')
 	head
 		meta(charset='UTF-8')
 		block head
-			title ardUI Docs
+			title ardUI Documentation
 		meta(name='viewport' content='width=device-width, initial-scale=1.0')
 		link(rel='icon' href='/img/ardUI_logo.svg')
 		link(rel='stylesheet' href='/style/stylify.css')
