--- a/docs/pages/tutorials/quickstart.pug
+++ b/docs/pages/tutorials/quickstart.pug
@@ -1,5 +1,46 @@
-extends ../../templates/layout
+extends ../../templates/tabbed
+include ../../templates/mixins/code
 
 
-block main
+block content
 	h1 Getting started with ardUI
+	p Starting out with ardUI is extremely easy! Consider this example:
+	+code(`
+		#include <Arduino.h>
+		#include "ardUI.h"
+
+		void setup() {
+		}
+
+		void loop() {
+		}
+	`)
+	p This might not look like much, but this is actually a functional ardUI program! This works because ardUI starts
+		|  working the moment you include it so you don't have to worry about calling it yourself.
+	p Okay, let's actually draw something now:
+	+code(`
+	#include <Arduino.h>
+	#include "ardUI.h"
+	#include "TextView.h"
+	#include "Activity.h"
+
+	class MainActivity: public Activity {
+		using Activity::Activity;
+
+		void onCreate() override {
+			auto t = new TextView("Hello world!");
+			setRootView(ll);
+		}
+	};
+
+	void setup() {
+		ardUI::startActivity<MainActivity>();
+	}
+
+	void loop() {
+	}
+	`)
+	p As you can see, this example is a bit more involved. Let's see what it does line by line.
+		|  On line 3 we are including a TextView, a widgets for displaying text that we'll be using later.
+		|  On the next line we include an Activity, or "a screen" that we will place all our widgets on. ardUI allows you
+		|  to create multiple screens and switch between them at any time. We actually define our Activity on line 6.
