--- a/docs/templates/tabbed.pug
+++ b/docs/templates/tabbed.pug
@@ -6,7 +6,7 @@ block main
 			h3 Navigation
 			div#nav-container
 				block nav
-		div#content
+		div#content-tab
 			block content
 		div#toc-tab
 			h3 Table of contents
