--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -62,6 +62,7 @@ html body main .tip-title {
 html body main code {
   display: block;
   background-color: #f7f7f7;
+  white-space: pre;
   border-radius: 5px;
   padding: 1em;
   counter-reset: code-line;
@@ -72,7 +73,8 @@ html body main code div {
 html body main code div:before {
   content: counter(code-line);
   display: inline-block;
-  width: 3.5ch;
+  width: 3.2ch;
+  margin-right: 0.5ch;
   border-right: 1px solid #ccc;
 }
 html body main code .empty {
