--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -72,6 +72,7 @@ html
 			code
 				display block
 				background-color darken(white, 3%)
+				white-space pre
 				border-radius 5px
 				padding 1em
 				counter-reset code-line
@@ -82,7 +83,8 @@ html
 					&:before
 						content counter(code-line)
 						display inline-block
-						width 3.5ch
+						width 3.2ch
+						margin-right .5ch
 						border-right 1px solid darken(white, 20%)
 
 				.empty
